<resources>
    <string name="app_name">DishMe</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="splash_screen_title">Dish Me</string>
    <string name="add_dish">Add Dish</string>
    <string name="lbl_add_dish">ADD DISH</string>
    <string name="image_contentDescription">image</string>
    <string name="lbl_title">Title</string>
    <string name="lbl_type">Type</string>
    <string name="lbl_category">Category</string>
    <string name="lbl_ingredients">Ingredients</string>
    <string name="lbl_cooking_time_in_minutes">Cooking Time In Minutes</string>
    <string name="lbl_direction_to_cook">Directions To Cook</string>

    <string name="title_select_image_action">Select Image Action</string>
    <string name="lbl_camera">Camera</string>
    <string name="lbl_gallery">Gallery</string>
    <string name="cd_gallery_icon">Gallery Icon</string>
    <string name="cd_image_icon">Image Icon</string>

    <string name="title_select_dish_type">SELECT DISH TYPE</string>
    <string name="title_select_dish_category">SELECT DISH CATEGORY</string>
    <string name="title_select_dish_cooking_time">SELECT DISH COOKING TIME</string>

    <string name="err_msg_select_dish_image">Select or take an image of the dish.</string>
    <string name="err_msg_select_dish_title">Enter a title for this dish.</string>
    <string name="err_msg_select_dish_type">Select the dish type.</string>
    <string name="err_msg_select_dish_category">Select the dish category.</string>
    <string name="err_msg_select_dish_ingredients">Enter the ingredients required to make this dish.</string>
    <string name="err_msg_select_dish_cooking_time">Select how long this dish take to make.</string>
    <string name="err_msg_select_dish_cooking_instructions">Enter cooking instructions.</string>
</resources>